--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,18 +7,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
 dioxus-web = { version = "0.4" }
 dioxus = { version = "0.4" }
-
 dioxus-router = { version = "0.4", features = ["web"] }
-
-# Debug
+anyhow = "1.0.68"
 log = "0.4.19"
 dioxus-logger = "0.4.1"
-
 console_error_panic_hook = "0.1.7"
-
 reqwest = { version = "0.11.20", features = ["json"] }
-
 serde = "1.0"
+url = "2.2.2"
+matrix-sdk = {version = "0.6.2", features = ["sso-login"]}
