--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,10 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[bin]]
+name = "dioxus-test"
+test = false
+
 [dependencies]
 dioxus-web = { version = "0.4" }
 dioxus = { version = "0.4" }
@@ -17,4 +21,4 @@ console_error_panic_hook = "0.1.7"
 reqwest = { version = "0.11.20", features = ["json"] }
 serde = "1.0"
 url = "2.2.2"
-matrix-sdk = {version = "0.6.2", features = ["sso-login"]}
+matrix-sdk = {version = "0.6.2", features = ["sso-login", "anyhow"]}
